--- a/about/about.html
+++ b/about/about.html
@@ -2,7 +2,7 @@
 <head>
   <title> Chada Cucina </title>
   <link href="https://fonts.googleapis.com/css?family=Helvetica&display=swap" rel="stylesheet"/>
-  <link rel="icon" type="image/png" href="/assets/ChadaCucina.png">
+  <link rel="icon" type="image/png" href="/homepage/icons/ChadaCucina.png">
   <link rel="stylesheet" type="text/css" href="/about/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
