--- a/homepage/home.html
+++ b/homepage/home.html
@@ -4,7 +4,8 @@
     <title> Chada Cucina </title>
     <link href="https://fonts.googleapis.com/css?family=Helvetica&display=swap" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="C:\Users\yuljh\Downloads\Chada Cucina\homepage\icons\ChadaCucina.png">
-    <link rel="stylesheet" href="/homepage/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../homepage/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -12,8 +13,8 @@
         <img src="/homepage/icons/ChadaCucina.png" id="logo">
         <nav>
             <ul class="nav-links">
-                <li><a href = "/homepage/home.html" style="color: #DC780B";> Home </a></li>
-                <li><a href = "/about/about.html"> About </a></li>
+                <li><a href = "../homepage/home.html" style="color: #DC780B";> Home </a></li>
+                <li><a href = "../about/about.html"> About </a></li>
                 <li class="dropdown">
                     <a href="#"> Categories </a>
                     <ul class="dropdown-menu">
